--- a/bookmarksList.html
+++ b/bookmarksList.html
@@ -3,15 +3,15 @@
 	<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>Pocker Extension</title>
+    <title>Pocket Extension</title>
 
     <link href="vendor/ionic/css/ionic.min.css" rel="stylesheet"></link>
     <link href="vendor/animate.css/animate.min.css" rel="stylesheet"></link>
     <link href="css/pocket.css" rel="stylesheet"></link>
 
-		<script src="vendor/jquery/jquery.js"></script>
-		<script src="vendor/q/q.js"></script>
-		<script src="vendor/underscore/underscore.js"></script>
+	<script src="vendor/jquery/jquery.js"></script>
+	<script src="vendor/q/q.js"></script>
+	<script src="vendor/underscore/underscore.js"></script>
     <script src="vendor/ionic/ionic.bundle.min.js"></script>
     <script src="vendor/angular-truncate/angular-truncate.js"></script>
     <script src="vendor/momentjs/moment.min.js"></script>
@@ -19,10 +19,10 @@
     <script src="vendor/ngAnimate-animate.css/animate.js"></script>
 
     <script src="js/common.js"></script>
-		<script src="js/bookmarkList.js"></script>
+	<script src="js/bookmarkList.js"></script>
   </head>
 
-  <body ng-controller="bookmarksCtrl">
+  <body ng-controller="bookmarksCtrl" style="width: 400px; height: 400px">
 
     <div class="bar bar-footer bar-positive item-input-inset">
       <button class="button ion-ios7-close" ng-click="wipeCache()" ng-show="debugMode"></button>
