first draft of design polishing

--- a/bookmarksList.html
+++ b/bookmarksList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="pocket">
+<html ng-app="pocket" class="chrome-extension">
 	<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -9,9 +9,9 @@
     <link href="vendor/animate.css/animate.min.css" rel="stylesheet"></link>
     <link href="css/pocket.css" rel="stylesheet"></link>
 
-	<script src="vendor/jquery/jquery.js"></script>
-	<script src="vendor/q/q.js"></script>
-	<script src="vendor/underscore/underscore.js"></script>
+    <script src="vendor/jquery/jquery.js"></script>
+    <script src="vendor/q/q.js"></script>
+    <script src="vendor/underscore/underscore.js"></script>
     <script src="vendor/ionic/ionic.bundle.min.js"></script>
     <script src="vendor/angular-truncate/angular-truncate.js"></script>
     <script src="vendor/momentjs/moment.min.js"></script>
@@ -19,12 +19,12 @@
     <script src="vendor/ngAnimate-animate.css/animate.js"></script>
 
     <script src="js/common.js"></script>
-	<script src="js/bookmarkList.js"></script>
+    <script src="js/bookmarkList.js"></script>
   </head>
 
-  <body ng-controller="bookmarksCtrl" style="width: 400px; height: 400px">
+  <body ng-controller="bookmarksCtrl">
 
-    <div class="bar bar-footer bar-positive item-input-inset">
+    <div class="bar bar-footer bar-calm item-input-inset">
       <button class="button ion-ios7-close" ng-click="wipeCache()" ng-show="debugMode"></button>
       <label class="item-input-wrapper">
         <i class="icon ion-ios7-search placeholder-icon"></i>
@@ -40,11 +40,10 @@
 
       <div class="list">
 
-        <a ng-repeat="item in bookmarks" href="#" class="item item-thumbnail-left dn-fade" ng-click="bookmarkSelected(item)">
+        <a ng-repeat="item in bookmarks" href="#" class="item item-avatar dn-fade" ng-click="bookmarkSelected(item)">
           <img ng-src="{{ item.icon }}"/>
-          <h2>{{ item.title || item.url | characters: 30}}</h2>
+          <h2>{{ item.title || item.url }}</h2>
           <p>{{ item.domain }}</p>
-          <p><i ng-class="{'icon':true, 'ion-ios7-star':item.favorite, 'ion-ios7-star-outline':!item.favorite}"></i><span class="time-updated" am-time-ago="item.time.updated"></span></p>
         </a>
 
       </div>
