set minimum size for BA popup and remove icon from list

--- a/bookmarksList.html
+++ b/bookmarksList.html
@@ -40,8 +40,7 @@
 
       <div class="list">
 
-        <a ng-repeat="item in bookmarks" href="#" class="item item-avatar dn-fade" ng-click="bookmarkSelected(item)">
-          <img ng-src="{{ item.icon }}"/>
+        <a ng-repeat="item in bookmarks" href="#" class="item dn-fade" ng-click="bookmarkSelected(item)">
           <h2>{{ item.title || item.url }}</h2>
           <p>{{ item.domain }}</p>
         </a>
