--- a/src/bookmarksList.html
+++ b/src/bookmarksList.html
@@ -10,7 +10,7 @@
   <body ng-controller="bookmarksCtrl">
 
     <div class="bar bar-footer bar-calm item-input-inset">
-      <button class="button ion-ios7-close" ng-click="wipeCache()" ng-show="debugMode"></button>
+      <button class="button ion-ios7-close" ng-click="wipeCache()" ng-show="!debugMode"></button>
       <label class="item-input-wrapper">
         <i class="icon ion-ios7-search placeholder-icon"></i>
         <input type="search" placeholder="Search" ng-model="searchText">
@@ -23,16 +23,18 @@
 
       <ion-refresher on-refresh="onRefresh()"></ion-refresher>
 
-      <div class="list">
+      <ion-list class="list" can-swipe="true">
 
-        <a ng-repeat="item in bookmarks" href="#" class="item" ng-click="bookmarkSelected(item)">
+        <ion-item ng-repeat="item in bookmarks" href="#" class="item" ng-click="bookmarkSelected(item)">
           <h2>{{ item.title || item.url }}</h2>
           <p>{{ item.domain }}</p>
-        </a>
+          <ion-option-button class="button-calm" ng-click="archive($event, item)">archive</ion-option-button>
+        </ion-item>
 
-      </div>
+      </ion-list>
 
       <ion-infinite-scroll
+        style=""
         on-infinite="loadNextPage()"
         ng-if="!allResultsFetched"
         distance="5%">
