--- a/src/bookmarksList.html
+++ b/src/bookmarksList.html
@@ -10,7 +10,7 @@
   <body ng-controller="bookmarksCtrl">
 
     <div class="bar bar-footer bar-calm item-input-inset">
-      <button class="button ion-ios7-close" ng-click="wipeCache()" ng-show="!debugMode"></button>
+      <button class="button ion-ios7-close" ng-click="wipeCache()" ng-show="debugMode"></button>
       <label class="item-input-wrapper">
         <i class="icon ion-ios7-search placeholder-icon"></i>
         <input type="search" placeholder="Search" ng-model="searchText">
