Functionality for adding/removing tags.

--- a/src/articleViewToolbar.html
+++ b/src/articleViewToolbar.html
@@ -6,7 +6,15 @@
 <body>
 
 <div>
-<a id="menuDelete">Delete me</a> | <a id="menuToggleStar">Loading...</a> | <a id="menuArchive">Archive</a> | Tags: <a id="menuTags"></a>
+    <a id="menuDelete">Delete me</a> |
+    <a id="menuToggleStar">Loading...</a> |
+    <a id="menuArchive">Archive</a> |
+    <form id="addTagForm">
+        <input id="menuAddTag" type="text" placeholder="Add tag here" />
+        <input type="submit" value="Add tag!" />
+    </form>
+
+    Tags: <span id="menuTags"></span>
 </div>
 
 </body>
