added indication of state on buttons

--- a/src/articleViewToolbar.html
+++ b/src/articleViewToolbar.html
@@ -45,8 +45,12 @@
     color: #929292;
   }
 
-  li.star-on {
+  li.star-on, li.archived {
     color: #eac300;
+  }
+
+  li.deleted {
+    color: #ccc;
   }
 </style>
 </head>
