--- a/src/bookmarksList.html
+++ b/src/bookmarksList.html
@@ -5,18 +5,125 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Pocket Extension</title>
     <script src="../js/bookmarkList.js"></script>
+    <style>
+      /* items list */
+      .btn-bar {
+        background: #f8f8f9;
+        padding: 8px 16px;
+        border-bottom: 1px solid #ddd;
+        position: absolute;
+        top: 59px;
+        width: 100%;
+        box-sizing: border-box;
+        z-index: 1;
+      }
+
+      .btn-bar ul {
+        border: 1px solid #157efb;
+        border-radius: 4px;
+        width: 100%;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        height: 34px;
+      }
+
+      .btn-bar li {
+        display: block;
+        float:left;
+        width: 33.333%;
+        text-align: center;
+        box-sizing: border-box;
+        border-right: 1px solid #157efb;
+        color: #157efb;
+        padding: 0;
+        margin: 0;
+        height: 32px;
+        line-height: 32px;
+        cursor: pointer;
+        -webkit-transition: all .2s all;
+        transition: all .2s all;
+      }
+
+      .btn-bar li:last-child {
+        border-right: 0;
+      }
+
+      .btn-bar li.active {
+        background: #157efb;
+        color: #fff;
+      }
+
+      .has-header {
+        top: 109px;
+        z-index: 0;
+      }
+
+      .bar.bar-header.bar-light {
+        border-color: #ddd;
+        background: #f8f8f9;
+        color: #444;
+        position: relative;
+        display: block;
+        padding: 8px 60px 8px 16px;
+        font-size: 16px;
+        height: 59px;
+      }
+
+      .bar.bar-header.bar-light h1 {
+        font-size: 16px;
+        margin: 0 0 4px 0;
+        padding: 0;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
+      .bar.bar-header.bar-light p {
+        font-size: 14px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
+      .bar.bar-header.bar-light button.button {
+        position: absolute;
+        top: 12px;
+        right: 16px;
+        border-radius: 4px;
+      }
+
+      .item-complex .item-content, .item-radio .item-content {
+        padding: 8px 60px 8px 16px;
+      }
+    </style>
   </head>
 
   <body ng-controller="bookmarksCtrl">
 
-    <div class="bar bar-header bar-calm item-input-inset">
+    <div class="bar bar-header bar-light">
+      <h1>item title soifv osidfv osidfjov sidjfv osdifjov ssdfv ds</h1>
+      <p>item domain sdfv osidjfv osidjfv osidjfv osidjfv osdifjv osdij</p>
+      <button id="add-or-article-view" class="button ion-ios7-plus" ng-click="addCurrentOrArticleView()"></button>
+    </div>
+
+    <div class="btn-bar">
+      <ul>
+        <li class="active">My List</li>
+        <li>Archived</li>
+        <li>Favs</li>
+      </ul>
+    </div>
+
+    <!--<div class="bar bar-header bar-light item-input-inset">
       <button class="button ion-ios7-close" ng-click="wipeCache()" ng-show="debugMode"></button>
       <label class="item-input-wrapper">
         <i class="icon ion-ios7-search placeholder-icon"></i>
         <input type="search" placeholder="Search" ng-model="searchText">
       </label>
       <button id="add-or-article-view" class="button ion-ios7-plus" ng-click="addCurrentOrArticleView()"></button>
-    </div>
+    </div>-->
 
 
     <ion-content class="has-header">
