--- a/src/bookmarksList.html
+++ b/src/bookmarksList.html
@@ -66,7 +66,7 @@
         color: #444;
         position: relative;
         display: block;
-        padding: 8px 60px 8px 16px;
+        padding: 8px 70px 8px 16px;
         font-size: 16px;
         height: 59px;
       }
@@ -87,15 +87,40 @@
         white-space: nowrap;
       }
 
-      .bar.bar-header.bar-light button.button {
+      .bar.bar-header.bar-light button.button, ion-item button.button {
         position: absolute;
         top: 12px;
-        right: 16px;
-        border-radius: 4px;
+        right: 8px;
+        color: #157efb;
+        display: inline-block;
+        margin: 0;
+        padding: 0 8px;
+        border: 0;
+        background: transparent;
+        vertical-align: top;
+        text-align: center;
+        font-size: 28px;
+        line-height: 34px;
+        cursor: pointer;
+        min-width: auto;
+        min-height: auto;
       }
 
-      .item-complex .item-content, .item-radio .item-content {
-        padding: 8px 60px 8px 16px;
+      ion-item button.button {
+        padding: 0 12px;
+      }
+
+      .bar.bar-header.bar-light button.button:hover, ion-item button.button:hover,
+      .bar.bar-header.bar-light button.button:active, ion-item button.button:active {
+        color: #157efb;
+      }
+
+      .item-complex .item-content {
+        padding: 8px 70px 8px 16px;
+      }
+
+      .item-complex .item-content p {
+        margin: 0;
       }
     </style>
   </head>
@@ -105,7 +130,7 @@
     <div class="bar bar-header bar-light">
       <h1>item title soifv osidfv osidfjov sidjfv osdifjov ssdfv ds</h1>
       <p>item domain sdfv osidjfv osidjfv osidjfv osidjfv osdifjv osdij</p>
-      <button id="add-or-article-view" class="button ion-ios7-plus" ng-click="addCurrentOrArticleView()"></button>
+      <button class="button ion-ios7-plus"></button>
     </div>
 
     <div class="btn-bar">
@@ -135,6 +160,7 @@
         <ion-item ng-repeat="item in bookmarks" href="#" class="item" ng-click="bookmarkSelected(item)">
           <h2>{{ item.title || item.url }}</h2>
           <p>{{ item.domain }}</p>
+          <button class="button ion-ios7-paper"></button>
           <ion-option-button class="button-calm" ng-click="archive($event, item)"><span class="v-center">archive</span></ion-option-button>
         </ion-item>
 
