--- a/src/bookmarksList.html
+++ b/src/bookmarksList.html
@@ -218,7 +218,7 @@
         <ion-item ng-repeat="item in bookmarks" href="#" class="item" ng-click="bookmarkSelected(item)">
           <h2>{{ item.title || item.url }}</h2>
           <p>{{ item.domain }}</p>
-          <button class="button ion-ios7-paper"></button>
+          <button class="button ion-ios7-paper" ng-click="articleView($event, item)"></button>
           <ion-option-button class="button-calm" ng-click="archive($event, item)"><span class="v-center">archive</span></ion-option-button>
         </ion-item>
 
