--- a/src/bookmarksList.html
+++ b/src/bookmarksList.html
@@ -184,16 +184,16 @@
         Also ion-ios7-search class on the toggle button should change to
         ion-ios7-close class when search container is active.
       -->
-      <ul class="active">
+      <ul id="tabsBar" class="active">
         <li id="my-items" ng-click="loadUnreadBookmarks()" class="active">My List</li>
         <li id="archived-items" ng-click="loadArchivedBookmarks();">Archived</li>
         <li id="favorited-items" ng-click="loadFavoritedBookmarks()">Favs</li>
       </ul>
-      <label class="item-input-wrapper">
+      <label id="searchBar" class="item-input-wrapper">
         <i class="icon ion-ios7-search placeholder-icon"></i>
         <input type="search" placeholder="Search" ng-model="searchText">
       </label>
-      <button class="button ion-ios7-search"></button>
+      <button class="button ion-ios7-search" ng-click="showSearchBar()"></button>
     </div>
 
     <!-- This can be removed now:
