Implement: add current page to bookmarks.

--- a/src/bookmarksList.html
+++ b/src/bookmarksList.html
@@ -172,7 +172,7 @@
     <div class="bar bar-header bar-light">
       <h1>item title soifv osidfv osidfjov sidjfv osdifjov ssdfv ds</h1>
       <p>item domain sdfv osidjfv osidjfv osidjfv osidjfv osdifjv osdij</p>
-      <button class="button ion-ios7-plus"></button>
+      <button class="button ion-ios7-plus" ng-click="addCurrentPageToPocket()"></button>
     </div>
 
     <div class="btn-bar">
