--- a/src/bookmarksList.html
+++ b/src/bookmarksList.html
@@ -169,10 +169,10 @@
 
   <body ng-controller="bookmarksCtrl">
 
-    <div class="bar bar-header bar-light">
+    <div id="currentPage" class="bar bar-header bar-light">
       <h1>item title soifv osidfv osidfjov sidjfv osdifjov ssdfv ds</h1>
       <p>item domain sdfv osidjfv osidjfv osidjfv osidjfv osdifjv osdij</p>
-      <button class="button ion-ios7-plus" ng-click="addCurrentPageToPocket()"></button>
+      <button class="button ion-ios7-plus" ng-click="addCurrentOrArticleView()"></button>
     </div>
 
     <div class="btn-bar">
