Remove unnecesary comments.

--- a/src/bookmarksList.html
+++ b/src/bookmarksList.html
@@ -177,7 +177,7 @@
 
     <div class="btn-bar">
       <!--
-        UI TODO: only ul container or search (.item-input-wrapper)
+        UI note: only ul container or search (.item-input-wrapper)
         container should be visible depending on which one of these
         has "active" class.
 
@@ -193,7 +193,7 @@
         <i class="icon ion-ios7-search placeholder-icon"></i>
         <input type="search" placeholder="Search" ng-model="searchText">
       </label>
-      <button class="button ion-ios7-search" ng-click="showSearchBar()"></button>
+      <button id="search-or-close" class="button ion-ios7-search" ng-click="showSearchBar()"></button>
     </div>
 
 
