Add: i18n support in english and czech

--- a/src/bookmarksList.html
+++ b/src/bookmarksList.html
@@ -185,7 +185,7 @@
         ion-ios7-close class when search container is active.
       -->
       <ul id="tabsBar" class="active">
-        <li id="my-items" ng-click="loadUnreadBookmarks()" class="active">My List</li>
+        <li id="my-items" ng-click="loadUnreadBookmarks()" class="active">MyList(loading)</li>
         <li id="archived-items" ng-click="loadArchivedBookmarks();">Archived</li>
         <li id="favorited-items" ng-click="loadFavoritedBookmarks()">Favs</li>
       </ul>
